--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 </head>
 <body>
     <header>
-        <nav></nav>
+        <p>Collection</p>
+        <nav>
+          <ul>
+            <li>Home</li>
+          </ul>
+        </nav>
     </header>
     <main>
-
+      <div class="book-grid">
+      </div>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
